# cred

./: .codespellrc  .gitignore  .gitmodules  .pickignore  .program  .program.in.example  .remote  CMakeLists.txt  INSTALL  Kconfig  Makefile  NOTE  README  TAGS  TODO  build  cred.manifest.in  cred.rc  make.ps1  program  test_log  test_log.unix  test_log.win32
.hooks/: pre-commit  pre-commit.sh  prepare-commit-msg  prepare-commit-msg.sh
arch/: .map
cmake/: arch  gettext  include  kconfig  manifest
commands/: corecmd.c  init.c  version.c
darwin/: path.c
freebsd/: path.c
include/: atexit.h  attr.h  attrdecl.h  barrier.h  bitopt.h  calc.h  cconv.h  charconv.h  compiler.h  constructor.h  corecmd.h  ctype.h  errno.h  features.h.in  fiter.h  gettext.h  hex.h  init.h  iter.h  levenshtein.h  list.h  mbchar.h  mbctype.h  mkdir.h  mwstr.h  noleak.h  param.h  path.h  pathwalk.h  pathwalk_types.h  prelude.h  proc.h  program.h.in  rio.h  scio.h  size.h  sqlite3.h  stdio.h  stdlib.h  strbuf.h  (+19 more)
include/sys/: stat.h
include/unicode/: clause.h  width.h
lib/: Kconfig.build  Kconfig.debug  Kconfig.feat  Kconfig.feature  Kconfig.include  Kconfig.init  Kconfig.sqlite  Kinclude.py  cmake.arch  cmake.bash  cmake.ccfeat  cmake.feat  cmake.feature  cmake.features  cmake.gettext  cmake.include  cmake.kconfig  cmake.manifest  cmake.openssl  cmake.sqlite  cmake.winsh
linux/: path.c
locale/: ja_JP.po  zh_CN.po
locale/ja_JP/LC_MESSAGES/: cred.mo
locale/zh_CN/LC_MESSAGES/: cred.mo
platfree/: atexit.c  calc.c  cconv.c  charconv.c  ctype.c  fiter.c  gettext.c  hex.c  levenshtein.c  list.c  mbchar.c  mbctype.c  mwstr.c  noleak.c  param.c  param_help.c  path.c  pathwalk.c  rio.c  sanitizer.c  scio.c  sqlite3.c  strbuf.c  strconv.c  string.c  strlist.c  strtox.c  termas.c  udef.c  uniclause.c  uniwidth.c  wcmbs.c  xalloc.c
scripts/: amend-license.sh  cc-feature.def  cc-feature.py  check-feature.py  check-style.sh  checkstyle.sh  dtypo.sh  fix-license.sh  init.sh  initloc.sh  kconfig.py  libkit.sh  libutil  libutil.sh  reconfdep.def  reconfdep.py  setup-repo.sh  synckit.sh  syncmo.sh  uniwidth.py  use-posix-libkit.sh
tests/: CMakeLists.txt  exec.sh  libtest.sh  masarg.c  version.sh
tests/param/: CMakeLists.txt  bit.c  bit.sh  choice.c  choice.sh  cmdmode.c  cmdmode.sh  command.c  command.sh  main.c  number.c  number.sh  partest.h  string.c  string.sh  switch.c  switch.sh
tests/unit/: CMakeLists.txt  fiter.c  hex.c  init.c  levenshtein.c  list.c  main.c  mkdir.c  param.c  path.c  pathwalk.c  proc.c  strbuf.c  strbuf_pth.c  strconv.c  string.c  strlist.c  strtox.c  unitest.h.in  ussert.c  ussert.h
unix/: fiter.c  main.c  mkdir.c  path.c  pathwalk.c  proc.c  time.c  timestamp.c
win32/: console.c  console.gui.c  console.h  constructor.c  errno.c  exit.c  exit.gui.c  fiter.c  legacy_cons.gui.c  legacy_cons.h  main.gui.c  main.tui.c  mkdir.c  path.c  pathwalk.c  proc.c  proc.gui.c  resdecl.h  sanitizer.gui.c  setenv.c  termas.c  time.c  timestamp.c  udef.gui.c
